--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "uuidv4": "^6.2.6"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "server": "nodemon backend/server.js",
     "client": "npm run start --prefix client",
     "build": "react-scripts build",
